# DEF-W9-13_SecureLink

./: .env.serve  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  README.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
configs/: debug.toml  paper.toml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-loss-functions.md  PRD-04-training-pipeline.md  PRD-05-evaluation.md  PRD-06-export-pipeline.md  PRD-07-integration.md
repositories/SecureLink_data/: README.md
repositories/SecureLink_data/CSI_00/: 1.csi  10.csi  11.csi  12.csi  13.csi  14.csi  15.csi  16.csi  17.csi  18.csi  19.csi  2.csi  20.csi  21.csi  22.csi  23.csi  24.csi  25.csi  3.csi  4.csi  5.csi  6.csi  7.csi  8.csi  9.csi
repositories/SecureLink_data/CSI_01/: 1.csi  10.csi  11.csi  12.csi  13.csi  14.csi  15.csi  16.csi  17.csi  18.csi  19.csi  2.csi  20.csi  21.csi  22.csi  23.csi  24.csi  25.csi  3.csi  4.csi  5.csi  6.csi  7.csi  8.csi  9.csi
repositories/SecureLink_data/CSI_02/: 1.csi  10.csi  11.csi  12.csi  13.csi  14.csi  15.csi  16.csi  17.csi  18.csi  19.csi  2.csi  20.csi  21.csi  22.csi  23.csi  24.csi  25.csi  3.csi  4.csi  5.csi  6.csi  7.csi  8.csi  9.csi
repositories/SecureLink_data/CSI_03/: 1.csi  10.csi  11.csi  12.csi  13.csi  14.csi  15.csi  16.csi  17.csi  18.csi  19.csi  2.csi  20.csi  (+12 more)
scripts/: evaluate.py  export.py  find_batch_size.py  train.py
src/securelink/: __init__.py  dataset.py  evaluate.py  losses.py  model.py  serve.py  train.py  utils.py
tasks/: TASK_INDEX.md
tests/: test_dataset.py  test_model.py
(+1000 files in other folders)
