[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "securelink"
version = "0.1.0"
description = "Cross-layer UAV authentication via RF and MEMS fingerprint fusion"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ANIMA Team", email = "team@robotflowlabs.com" },
]
dependencies = [
    "torch>=2.0",
    "torchvision",
    "torchaudio",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "tensorboard>=2.14",
    "safetensors>=0.4",
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "tqdm>=4.65",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
serve = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/securelink"]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4"]
ignore = ["N806", "N812"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
